Replace per access key data limits with server data limit
