# src/shadowbox/server/manager_service.ts
@@ -14,12 +14,12 @@
 
 import * as restify from 'restify';
 import {makeConfig, SIP002_URI} from 'ShadowsocksConfig/shadowsocks_config';
-import {version} from '../package.json';
 
 import {JsonConfig} from '../infrastructure/json_config';
 import * as logging from '../infrastructure/logging';
-import {AccessKey, AccessKeyRepository, DataUsage} from '../model/access_key';
+import {AccessKey, AccessKeyRepository, DataLimit} from '../model/access_key';
 import * as errors from '../model/errors';
+import {version} from '../package.json';
 
 import {ManagerMetrics} from './manager_metrics';
 import {ServerConfigJson} from './server_config';
@@ -42,8 +42,7 @@ function accessKeyToJson(accessKey: AccessKey) {
       method: accessKey.proxyParams.encryptionMethod,
       password: accessKey.proxyParams.password,
       outline: 1,
-    })),
-    dataLimit: accessKey.dataLimit
+    }))
   };
 }
 
@@ -53,7 +52,7 @@ interface RequestParams {
   //   id: string
   //   name: string
   //   metricsEnabled: boolean
-  //   limit: DataUsage
+  //   limit: DataLimit
   //   port: number
   //   hours: number
   [param: string]: unknown;
@@ -85,14 +84,18 @@ export function bindService(
 
   apiServer.del(`${apiPrefix}/access-keys/:id`, service.removeAccessKey.bind(service));
   apiServer.put(`${apiPrefix}/access-keys/:id/name`, service.renameAccessKey.bind(service));
-  apiServer.put(
-      `${apiPrefix}/access-keys/:id/data-limit`, service.setAccessKeyDataLimit.bind(service));
-  apiServer.del(
-      `${apiPrefix}/access-keys/:id/data-limit`, service.removeAccessKeyDataLimit.bind(service));
 
   apiServer.get(`${apiPrefix}/metrics/transfer`, service.getDataUsage.bind(service));
   apiServer.get(`${apiPrefix}/metrics/enabled`, service.getShareMetrics.bind(service));
   apiServer.put(`${apiPrefix}/metrics/enabled`, service.setShareMetrics.bind(service));
+
+  // Experimental APIs
+  apiServer.put(
+      `${apiPrefix}/experimental/access-key-data-limit`,
+      service.setAccessKeyDataLimit.bind(service));
+  apiServer.del(
+      `${apiPrefix}/experimental/access-key-data-limit`,
+      service.removeAccessKeyDataLimit.bind(service));
 }
 
 function validateAccessKeyId(accessKeyId: unknown): string {
@@ -248,26 +251,23 @@ export class ShadowsocksManagerService {
   public async setAccessKeyDataLimit(req: RequestType, res: ResponseType, next: restify.Next) {
     try {
       logging.debug(`setAccessKeyDataLimit request ${JSON.stringify(req.params)}`);
-      const accessKeyId = validateAccessKeyId(req.params.id);
-      const limit = req.params.limit as DataUsage;
-      if (!limit) {
+      const limit = req.params.limit as DataLimit;
+      if (limit === undefined) {
         return next(
-            new restify.MissingParameterError({statusCode: 400}, 'Parameter `limit` is missing'));
-      } else if (!Number.isInteger(limit.bytes)) {
-        return next(new restify.InvalidArgumentError(
-            {statusCode: 400}, 'Parameter `limit.bytes` must be an integer'));
+            new restify.MissingParameterError({statusCode: 400}, 'Missing `limit` parameter'));
+      } else if (!!limit && !Number.isInteger(limit.bytes)) {
+        return next(
+            new restify.InvalidArgumentError({statusCode: 400}, '`limit` must be an integer'));
       }
-      await this.accessKeys.setAccessKeyDataLimit(accessKeyId, limit);
+      this.accessKeys.setAccessKeyDataLimit(limit);
+      this.serverConfig.data().accessKeyDataLimit = limit;
+      this.serverConfig.write();
       res.send(HttpSuccess.NO_CONTENT);
       return next();
     } catch (error) {
       logging.error(error);
       if (error instanceof errors.InvalidAccessKeyDataLimit) {
         return next(new restify.InvalidArgumentError({statusCode: 400}, error.message));
-      } else if (error instanceof errors.AccessKeyNotFound) {
-        return next(new restify.NotFoundError(error.message));
-      } else if (error instanceof restify.HttpError) {
-        return next(error);
       }
       return next(new restify.InternalServerError());
     }
@@ -276,24 +276,18 @@ export class ShadowsocksManagerService {
   public async removeAccessKeyDataLimit(req: RequestType, res: ResponseType, next: restify.Next) {
     try {
       logging.debug(`removeAccessKeyDataLimit request ${JSON.stringify(req.params)}`);
-      const accessKeyId = validateAccessKeyId(req.params.id);
-      await this.accessKeys.removeAccessKeyDataLimit(accessKeyId);
+      await this.accessKeys.removeAccessKeyDataLimit();
+      delete this.serverConfig.data().accessKeyDataLimit;
+      this.serverConfig.write();
       res.send(HttpSuccess.NO_CONTENT);
       return next();
     } catch (error) {
       logging.error(error);
-      if (error instanceof errors.AccessKeyNotFound) {
-        return next(new restify.NotFoundError(error.message));
-      } else if (error instanceof restify.HttpError) {
-        return next(error);
-      }
       return next(new restify.InternalServerError());
     }
   }
 
   public async getDataUsage(req: RequestType, res: ResponseType, next: restify.Next) {
-    // TODO(alalama): use AccessKey.dataUsage to avoid querying Prometheus. Deprecate this call in
-    // the manager in favor of `GET /access-keys`.
     try {
       res.send(HttpSuccess.OK, await this.managerMetrics.getOutboundByteTransfer({hours: 30 * 24}));
       return next();
